@@ -41,6 +41,7 @@ sub insert_test_report ( $self, $report ) {
     my $schema = $self->result_source->schema;
 
     my $guid = $report->id;
+    $LOG->infof( 'Updating stats row (report %s)', $guid );
     my $data = $report->report;
     my $created = $report->created;
 
@@ -50,8 +51,18 @@ sub insert_test_report ( $self, $report ) {
         version => $data->{distribution}{version},
     })->all;
 
-    die $LOG->warn("No upload match for GUID $guid") unless @uploads;
-    $LOG->warn("Multiple upload matches for GUID $guid") if @uploads > 1;
+    if ( !@uploads ) {
+        die $LOG->error(
+            sprintf 'No upload matches for dist %s version %s (report %s)',
+            $data->{distribution}->@{qw( name version )}, $guid,
+        );
+    }
+    elsif ( @uploads > 1 ) {
+        $LOG->warnf(
+            'Multiple upload matches for dist %s version %s (report %s)',
+            $data->{distribution}->@{qw( name version )}, $guid,
+        );
+    }
     my $uploadid = $uploads[0]->uploadid;
 
     my $stat = {
