@@ -2,6 +2,11 @@ Changelog for CPAN-Testers-Schema
 
 {{ $NEXT }}
 
+    [Changed]
+
+    - Added some additional logging to some resultset methods to try to
+      track down some problems.
+
 0.019     2017-08-18 12:16:21-05:00 America/Chicago
 
     [Fixed]
